--- a/1.基础.md
+++ b/1.基础.md
@@ -1,8 +1,12 @@
 # Phthon 入门
 
-1.  // 
+1. // 
 
-2.  %
+   " / "表示 浮点数除法，返回**浮点结果**;
+
+   " // "表示**整数除法**。
+
+2. % : 取模 - 返回除法的余数
 
 3. ```python
    pow(base,exp,mod) base为底的exp次幂，如果mod给出，取余
@@ -24,7 +28,18 @@
 
 7. **几（几次方）
 
-8. 字符串转字节：
+8.  正则中字符 **r** 是干啥的
+
+   ```python
+   s1 = r'\n.*'
+   print(s1) 
+   # 告诉解释器后面的一串是原生字符串，按照字面意思解释即可
+   # 它告诉编译器s串第一个字符是\，第二个字符是n.打印的结果就是它本身
+   # 而如果不带前缀字符r
+   # 解释器认为前两个字符\n为转义字符，一个新行的意思，打印结果为一个换行加.*
+   ```
+
+9. 字符串转字节：
 
    ```python
    s = "apple"
@@ -32,7 +47,7 @@
    	#b'apple'
    ```
 
-9.  执行字符串表示的代码:
+10. 执行字符串表示的代码:
 
     ```python
     In [1]: s  = "print('helloworld')"
@@ -46,7 +61,7 @@
     helloworld
     ```
 
-10. 字符串格式化
+11. 字符串格式化
 
     `print("i am {0},age{1}".format("tom",18))`
 
@@ -66,6 +81,7 @@
     | 18         | {:>10d} | ' 18'     | 右对齐 (默认, 宽度为10)      |
     | 18         | {:<10d} | '18 '     | 左对齐 (宽度为10)            |
     | 18         | {:^10d} | ' 18 '    | 中间对齐 (宽度为10)          |
+
     '{:b}'.format(11)  #1011 二进制
 
     '{:d}'.format(11)  #11 十进制
@@ -78,30 +94,30 @@
 
     '{:#X}'.format(11)  #0XB
 
-11.  ```python
-     def foo(param1, *param2): ## 将参数以元组（tuple）的形式导入
-         print(param1)
-         print(param2)
-     foo(1,2,3,4,5)
-     				#  输出： 1
-         			#		(2,3,4,5)
-     def bar(param1, **param2):## 将参数以字典的形式引入
-         print(param1)
-         print(param2)
-     bar(1,a=2,b=3)
-     				#  输出： 1
-         			#		{'a':2,'b':3}
-     ```
+12. ```python
+    def foo(param1, *param2): ## 将参数以元组（tuple）的形式导入
+        print(param1)
+        print(param2)
+    foo(1,2,3,4,5)
+    				#  输出： 1
+        			#		(2,3,4,5)
+    def bar(param1, **param2):## 将参数以字典的形式引入
+        print(param1)
+        print(param2)
+    bar(1,a=2,b=3)
+    				#  输出： 1
+        			#		{'a':2,'b':3}
+    ```
 
-12.  ```python
-     # 转化为集合类型： 返回一个set对象，集合内不允许有重复对象
-     In [159]: a = [1,4,2,3,1]
-     
-     In [160]: set(a)
-     Out[160]: {1, 2, 3, 4}
-     ```
+13. ```python
+    # 转化为集合类型： 返回一个set对象，集合内不允许有重复对象
+    In [159]: a = [1,4,2,3,1]
+    
+    In [160]: set(a)
+    Out[160]: {1, 2, 3, 4}
+    ```
 
-13. 枚举对象
+14. 枚举对象
 
     ```python
     In [1]: s = ["a","b","c"]
@@ -113,42 +129,40 @@
     3 c
     ```
 
-14.  迭代器
+15. 迭代器
 
-     ```python
-     In [1]: class TestIter(object):
-         ...:     def __init__(self):
-         ...:         self.l=[1,3,2,3,4,5]
-         ...:         self.i=iter(self.l)
-         ...:     def __call__(self):  #定义了__call__方法的类的实例是可调用的
-         ...:         item = next(self.i)
-         ...:         print ("__call__ is called,fowhich would return",item)
-         ...:         return item
-         ...:     def __iter__(self): #支持迭代协议(即定义有__iter__()函数)
-         ...:         print ("__iter__ is called!!")
-         ...:         return iter(self.l)
-     In [2]: t = TestIter()
-     In [3]: t() # 因为实现了__call__，所以t实例能被调用
-     __call__ is called,which would return 1
-     Out[3]: 1
-     
-     In [4]: for e in TestIter(): # 因为实现了__iter__方法，所以t能被迭代
-         ...:     print(e)
-         ...: 
-     __iter__ is called!!
-     1
-     3
-     2
-     3
-     4
-     5
-     ```
+    ```python
+    In [1]: class TestIter(object):
+        ...:     def __init__(self):
+        ...:         self.l=[1,3,2,3,4,5]
+        ...:         self.i=iter(self.l)
+        ...:     def __call__(self):  #定义了__call__方法的类的实例是可调用的
+        ...:         item = next(self.i)
+        ...:         print ("__call__ is called,fowhich would return",item)
+        ...:         return item
+        ...:     def __iter__(self): #支持迭代协议(即定义有__iter__()函数)
+        ...:         print ("__iter__ is called!!")
+        ...:         return iter(self.l)
+    In [2]: t = TestIter()
+    In [3]: t() # 因为实现了__call__，所以t实例能被调用
+    __call__ is called,which would return 1
+    Out[3]: 1
+    
+    In [4]: for e in TestIter(): # 因为实现了__iter__方法，所以t能被迭代
+        ...:     print(e)
+        ...: 
+    __iter__ is called!!
+    1
+    3
+    2
+    3
+    4
+    5
+    ```
 
-     
+16. 元组，即tuple，是不可变对象，对象一旦生成，它的值将不能更改；列表是可变对象，对象生成后，可以对其元素进行更改，等操作。
 
-15. 元组，即tuple，是不可变对象，对象一旦生成，它的值将不能更改；列表是可变对象，对象生成后，可以对其元素进行更改，等操作。
-
-16. 理解 `__init__` 和 `__call__`:
+17. 理解 `__init__` 和 `__call__`:
 
     ​		`__init__` 和 `__call__`方法都是用来初始化类的，但他们存在一些区别：
 
@@ -221,11 +235,7 @@
     '''
     ```
 
-    
-
-    
-
-17. 操作对象函数
+18. 操作对象函数
 
     ```python
     In [31]: def f():
@@ -241,14 +251,12 @@
     # 创建函数对象的list，根据想要调用的index，方便统一调用。
     ```
 
-18. 逆序序列
+19. 逆序序列
 
     ```python
     list(range(10,-1,-1)) # [10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
     # 第三个参数为负时，表示从第一个参数开始递减，终止到第二个参数(不包括此边界)
     ```
-
-19. 
 
 20. 变量赋值不改变 原本左边指向的右边 的值，而是将左边指向新的内存对象。
 
@@ -258,43 +266,58 @@
 
 23. 字符串元素的索引从0开始，负数反过来表示索引
 
-24. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
+24. ```python
+    str[a::b] # 从索引位置‘a'开始，正序每’b'个字符取一次
+    str[a::-b] # 从索引位置‘a'开始，倒序每’b'个字符取一次
+    str[::-b] # 第一位没有数字，代表从 最后一位 开始
+    ```
 
-25. py的函数定义， 注意缩进。
+25. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
 
-26. 函数必须先定义，再调用，上下关系。
+26. 反转两个字符串的方法
 
-27. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
+    1. ```python
+       st = "python"
+       
+       # 法1：''.join(reversed(st)) # 用空字符连接 逆置的st字符串
+       # 法2：st[::1]
+       ```
 
-28. 在定义函数时，赋缺省值，即default
+27. py的函数定义， 注意缩进。
 
-29. 列表里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
+28. 函数必须先定义，再调用，上下关系。
 
-30. 列表的sequence操作，即索引切片
+29. 函数的返回，`return ‘’`。引号里代表这个函数的返回，获取后输出。
 
-31. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
+30. 在定义函数时，赋缺省值，即default
 
-32. 元组（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
+31. **列表**里边可存函数，可存列表 `nameList = [1,2,3，['hello'], [7,8,9] ]`
 
-33. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
+32. 列表的sequence操作，即索引切片
 
-34. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
+33. 列表特性-存储内容的改变。直接`a[i]=xxx,a[i][j]=xxx`
 
-35. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+34. **元组**（Tuple）：和列表不同的是，它的内容是无法改变的。`nameList=（）`，圆括号用来表示一个元组。`a = （1,2,3.14，‘hello’，[7,8,9]）`如果元组中只有一个元素，也要加逗号，即`a = (1,)`,否则对于`a = （1）`会被视为是数字1.
 
-36. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+35. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
 
-37. 且 的条件组合：**and**
+36. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
 
-38. 或 的条件组合：**or**
+37. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
 
-39. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+38. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
 
-40. **not**  翻转表达式。
+39. 且 的条件组合：**and**
 
-41. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+    或 的条件组合：**or**
 
-42. ```python
+40. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+
+41. **not**  翻转表达式。
+
+42. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+
+43. ```python
     def regis(): # 注意定义函数后的 冒号
         phont = input('请输入手机号（不超过11位）：')
         if len(phone) > 11: # 注意if语句后的 冒号
@@ -309,9 +332,9 @@
     regis()
     ```
 
-43. 字面量（直接写出来的） 和 变量
+44. 字面量（直接写出来的） 和 变量
 
-44. 字符串
+45. 字符串
 
     1.  字符串.count('xx')
 
@@ -345,7 +368,7 @@
 
     10.  startswith和endswith：检查开头或结尾是否包含某字符串并返回true或false。
 
-45. 列表对象
+46. 列表对象
 
     1.  append：改变列表内容，在**后面**加一个元素
     2.  insert:在指定位置（索引）处添加。
@@ -353,7 +376,7 @@
     4.  remove：删除。pop是删除元素的**索引**，remove是删除元素的**值**。remove从第一个元素开始，寻找 和参数对象 相同的元素，如果找到了就删除。找到后，不会继续往后找其他相等的元素。也就是说remove最多只会删除一个元素。
     5.  reverse：倒置，将列表中元素倒过来。
 
-46. 格式化字符串：把一串 字符串模板 的 变量值 传进去
+47. 格式化字符串：把一串 字符串模板 的 变量值 传进去
 
     1.  printf格式化字符串：%s，这种占位符方式。`printf('%s,%s,%s' %(x,y,z))`
         1.  如果占位符是1个，后面的元组里边一定别忘了**加逗号**.`printf('%s' %(x,))`.。因为%()是一个元组。
@@ -368,7 +391,7 @@
         5.  {s:<08.2f}：不足右边补0.
         6.  {s:08.2f}:不足左边补0，因为此时没有左对齐了。
 
-47. 循环：while 和 for
+48. 循环：while 和 for
 
     1. ```python
        command = input('请输入命令：')
@@ -455,7 +478,7 @@
                     printf(f'{mem1} 大战 {mem2}')
             ```
 
-48. 字符串编码
+49. 字符串编码
 
     ```python
     print('你好'.encode('utf8')) # 输出 b'\xe4\xbd......'
@@ -465,7 +488,7 @@
     # 你好 两个字 编码后为 e4bda0 e5a5bd
     ```
 
-49. 文件操作
+50. 文件操作
 
     1. 首先通过**内置函数open** 打开文件,获得**文件对象**。
 
@@ -536,8 +559,6 @@
 
         ​	文本，视频，图片，word，excel
 
-        ​	
-
         ```python
         # mode 参数指定为 rb，就是以二进制读的方式打开文件
         f = open('tmp.txt','rb')# rb,wb,.如果是wb，则写要写 二进制的字节串
@@ -566,7 +587,6 @@
         f.write(content.encode('utf8'))
         
         f.close()
-        
         
         ## 直接表示字节串内容并写入
         content = b'\xe7\x99'
@@ -600,8 +620,6 @@
                   f.write('|'.join(recordList) + '\n')
           ```
 
-          
-
        2.  `import x`  x这个模块也视为一个对象         x.xx
 
        3. `from x import xx `                                           xx
@@ -615,8 +633,6 @@
        7. `from save import saveToFile`
 
           `from save2 import saveToFile as saveToFile2`
-
-          
 
        8. 把模块放入包中
 
@@ -633,9 +649,9 @@
                      ....
                  ....
              ```
-
+       
           2. 内置库
-
+       
           3. ```python
              import datetime
              
@@ -643,9 +659,9 @@
              
              datetime.date.now().strftime("%Y%m%d %H:%M:%S")
              ```
-
+       
           4. 解释器怎么寻找模块文件？
-
+       
              1. 首先在内置模块里找
              2. 环境变量PYTHONPATH中的都会在解释器启动后，放到sys.path里。，从而作为模块搜索路径。
              3. 启动脚本 文件所在目录
@@ -653,9 +669,9 @@
                 2.  
           
 
-50. IDE
+51. IDE
 
-51. 字典
+52. 字典
 
     1. key-value
 
@@ -735,9 +751,18 @@
 
     14. 合并：`mem.update(another)`,将mem后面加上another字典的内容。
 
+        1. 一行代码实现合并字典:
+
+           ```python
+           >>def **merge_dict**(dic1, dic2):    
+           >>return {**dic1, **dic2} 
+           >>merge_dict({'a': 1, 'b': 2}, {'c': 3}) 
+           	# {'a': 1, 'b': 2, 'c': 3}
+           ```
+
     15. 得到字典中元素的个数：`len(mem)`
 
-52. ```python
+53. ```python
     type(12) ## 整数
     type('12') ## 字符
     type([1,2]) ## 列表
@@ -745,7 +770,7 @@
     type({1:2}) ## 字典
     ```
 
-53. 自定义类
+54. 自定义类
 
     1.  ```python
         def pressHorn():
@@ -832,7 +857,7 @@
         
     4.  类的组合关系
 
-54. 异常
+55. 异常
 
     1. 定义异常对象
 
@@ -871,7 +896,7 @@
               print(traceback.format_exc())## 打印错误代码行数 必须import traceback
           ```
 
-55. 多线程
+56. 多线程
 
     1. ```python
        print('主线程')
@@ -949,7 +974,7 @@
         print(f'最后为{bant["tec"]}')
         ```
 
-56. 装饰器
+57. 装饰器
 
     1.  ```python
         import time
@@ -987,7 +1012,7 @@
         # https://www.zhihu.com/question/26930016
         ```
 
-57. JSON序列化
+58. JSON序列化
 
     1.  JSON是个字符串
     2.  列表中镶嵌字典(数据对象)→字符串
@@ -996,7 +1021,7 @@
     5.  序列化：`jsonStr = json.dumps(historyTransactions,ensure_ascii=False,indent=4)`
     6.  反序列化：`obj = json.loads(jsonStr)`
 
-58. socket
+59. socket
 
     1. ```python
        # tcp server 服务端
@@ -1088,7 +1113,7 @@
         
         ```
 
-59. 日期与时间
+60. 日期与时间
 
     1.  `time.time()`
 
@@ -1103,7 +1128,7 @@
         time.strftime('%Y%m%d %H:%M:%S',time.localtime(秒数))#epoch秒数
         ```
 
-60. 文件和目录
+61. 文件和目录
 
     1.  ```python
         # 递归创建目录 makedirs
@@ -1135,7 +1160,7 @@
         print(dirs)
         ```
 
-61. JSON深度拷贝
+62. JSON深度拷贝
 
     1.  ```python
         t1 = [
@@ -1152,4 +1177,37 @@
         # 先序列化为字节串再反序列化
         ```
 
-        
+63.  正则
+
+     1.  ```python
+         # 以d开始，[a-z]表示的任意一个小写英文字符，{7}表示小写英文字符出现7次(下面情况3会说到)，也就是匹配出来的子串长度为1+7=8:
+         pat = 'd[a-z]{7}'
+         result = re.findall(pat,s)
+         
+         # [A-Z]  匹配大写英文字母
+         # [0-9]  匹配一个0-9之间的数字
+         # \s  匹配空白字符，如\n \t \b等
+         # \w  匹配任意字母、数字、下划线 
+         # \d  匹配十进制数字0-9
+         # 而\S, \W, \D 分别对应 \s, \w, \d匹配字符集的补集，例如\S 的意思是匹配 \s 以外的其他任意字符。
+         ```
+
+64.  ### 使用元字符查找
+
+     1.  `元`的含义大家不妨理解为用来描述它后面事物的类，如*元类*用来创建描述类的类，*元模型*描述一个模型的模型，因此推而广之，*元字符*用来描述字符的字符。
+
+         理解以上后，你再看正则中使用最普遍的一个元字符 `+`，它是用来描述前面一个原子出现次数的字符，表示前一个原子出现1次或多次都可。
+
+         例如，在寻找手机靓号时，正则表达式`66+`，表示前一个原子`6`至少出现1次，因此连上第一个6，表示电话号码中至少有两个66紧邻。因此，电话号码`18612652166`、`17566665656`都满足要求，而号码`18616161616`不符合要求。
+
+         类似功能的元字符，还包括如下。功能相似，不再赘述：
+
+         + \* 前面的原子重复0次、1次、多次  
+
+         + ? 前面的原子重复0次或者1次  
+
+         + 前面的原子重复1次或多次 
+         + {n} 前面的原子出现了 n 次 
+         + {n,} 前面的原子至少出现 n 次 
+         + {n,m} 前面的原子出现次数介于 n-m 之间
+
