--- a/5.pytorch-优化方法.md
+++ b/5.pytorch-优化方法.md
@@ -28,3 +28,15 @@ $$
 &v = 0.8v +0.2 \nabla w &, \nabla w 表示前一次的梯度\\
 &w = w- \alpha v &, \alpha 表示学习率
 $$
+
+## 3.5 AdaGrad
+
+​	自适应学习率
+
+## 3.6 RMSProp
+
+​	让步长（梯度的值）越来越小
+
+## 3.7 Adam
+
+​		动量法+RMSprop，学习率能够自适应，梯度的振幅不会过大
