--- a/1.基础.md
+++ b/1.基础.md
@@ -1203,11 +1203,25 @@
          类似功能的元字符，还包括如下。功能相似，不再赘述：
 
          + \* 前面的原子重复0次、1次、多次  
-
          + ? 前面的原子重复0次或者1次  
-
          + 前面的原子重复1次或多次 
          + {n} 前面的原子出现了 n 次 
          + {n,} 前面的原子至少出现 n 次 
          + {n,m} 前面的原子出现次数介于 n-m 之间
+     
+65. **时间转数组及常用格式**
 
+    1. ```python
+           %Y  #Year with century as a decimal number.
+           %m  #Month as a decimal number [01,12].
+           %d  #Day of the month as a decimal number [01,31].
+           %H  #Hour (24-hour clock) as a decimal number [00,23].
+           %M  #Minute as a decimal number [00,59].
+           %S  #Second as a decimal number [00,61].
+           %z  #Time zone offset from UTC.
+           %a  #Locale's abbreviated weekday name.
+           %A  #Locale's full weekday name.
+           %b  #Locale's abbreviated month name.
+       ```
+
+       
