--- a/1.基础.md
+++ b/1.基础.md
@@ -267,11 +267,34 @@
 23. 字符串元素的索引从0开始，负数反过来表示索引
 
 24. ```python
+    # 切片操作基本表达式：
+    # object[start_index:end_index:step]
     str[a::b] # 从索引位置‘a'开始，正序每’b'个字符取一次
     str[a::-b] # 从索引位置‘a'开始，倒序每’b'个字符取一次
     str[::-b] # 第一位没有数字，代表从 最后一位 开始
+    # 当只有一个 ：时，默认第三个参数step=1；
+    # 当一个“:”也没有时，start_index=end_index，表示切取start_index指定的那个元素。
+    >>>a = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+    
+        >>>a[:] #从左往右
+        >>> [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        >>>a[::]#从左往右
+        >>> [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        >>>a[::-1]#从右往左
+        >>> [9, 8, 7, 6, 5, 4, 3, 2, 1, 0]
+        
+    >>>a[1:6:-1]
+    >>> []
+    输出为空列表，说明没取到数据。
+    step=-1，决定了从右往左取值，而start_index=1到end_index=6决定了从左往右取值，两者矛盾，所以为空。
+    
+    >>>a[:6:-1]
+    >>> [9, 8, 7]
+    step=-1，从右往左取值，而start_index省略时，表示从端点开始，因此这里的端点是“终点”，即从“终点”值9开始一直取到end_index=6（该点不包括）。
+    
+    
     ```
-
+    
 25. 字符串 切片的位置！（从左向右，从**0**开始。从右向左，最右**-1**。以左方为索引位置）左闭右开
 
 26. 反转两个字符串的方法
