--- a/1.2.解疑.md
+++ b/1.2.解疑.md
@@ -17,30 +17,106 @@
    device = torch.device("cuda" if torch.cuda.is_available() else "cpu")
    ```
 
-4. LeNet
+4. 卷积神经网络
 
-   * 两个layer（conv+pool）+ 两层网络 + 全连接层
+   * 包含：
 
-   * ![22](img/22.png)
+     1. 卷积层（convolution）
 
-   ![23](img/23.png)
+        * 卷积运算过程：需要卷积核
+          * 大小：奇数大小的过滤器，1×1,3×3,5×5
+        * 1、正常卷积核运算，默认移动一个像素
+          * 缺点 ：图片变小，边缘信息丢失
+        * 2、零填充
+          * 因为0在权重乘积和运算中对最终结果不造成影响，也就避免了图片增加了额外的干扰信息。
+          * ![19](/img/19.png)
+          * 两种方式
+            * Valid：不填充，结果变小
+            * SAME：输出图像与原图相等大小
+          * 注意：由于避免零填充不均匀，所以我们需要奇数大小的过滤器,F即卷积核为奇数
+        * 3、步长
+          * 如果步长不为默认1的情况下，那么
+            * 图片大小N,过滤器大小F,步长S,零填充P
+            * 卷积后尺寸：((N+2P-F)/S+1),((N+2P-F)/S+1) (原尺寸 + 2*零填充-卷积核) /步长
+        * 4、多通道的图片：Filter必须使用相同的通道数
+        * 5、多个卷积核数量
+          * 得到的特征图大小没有影响，而数量会变化，多少卷积核多少特征图
 
-   
+     2. 卷积层的运算结果
 
-   * 过滤器f=5，即 每5×5个窗口滑动卷积
-   * ![24](img/24.png)
+        * 假设神经网络某层  ζ 的输入：
 
-5. 
+        ![notknow1](img/notknow1.png)
 
+     3. 池化层（subsampling）
+
+        * 最大池化
+          * ![20](img/20.png)
+        * 平均池化
+        * 窗口设置
+          * 2×2 ，两个步长，没有参数
+        * 作用
+          * 降低了后续网络层的输入维度，缩减模型大小，提高计算速度
+          * 提高了Feature Map的鲁棒性，防止过拟合
+
+     4. 全连接层（full connection）
+
+        * ![21](img/21.png)
+
+     5. 激活函数
+
+5. 经典分类卷积网络结构
+
+   1. LeNet
+      * 两个layer（conv+pool）+ 两层网络 + 全连接层
+      * ![22](img/22.png)
+      * ![23](img/23.png)
+      * 过滤器f=5，即 每5×5个窗口滑动卷积
+      * ![24](img/24.png)
+   2. AlexNet
+      * 首次Relu函数
+   3. VGG参数巨大，GoogleNet参数较少
+   4. Inception模块，造成参数变少
+   5. 1×1卷积
+      * 对多个通道进行信息整合，通道进行线性回归运算
+      * 达到通道数的变化（升维，降维，或维度不变化（通道数））参数数量减少
+   6. **Inception**
+      1. 目的
+         * 代替人手工去确定到底使用1×1,3×3,5×5还是是否需要MAX_POOLing层，由网络自动去寻找合适的结构，并且节省计算
+      2. 特点
+         * 使用多种卷积核进行运算合并结果通道数
+      3. 最终结果都变成28×28×256
+         * 使用更少的参数，达到和AlexNet或VGG同样类似的输出结果
+      4. 计算量还是太大？参数还是太多?
+         * 网络缩小后再扩展，在5×5之前加一个1×1卷积结构
+
+6. 迁移学习
+
+   ![25](img/25.png)
+
+
+
+6. 卷积流程
+   * ![26卷积流程](img/26卷积流程.png)
+   * 案例流程总结：
+     * 网络构建
+     * 两层layer：卷积+激活+池化
+       * Z1 = tf.nn.conv2d(X,W1,strides=[1,1,1,1],padding="SAME")
+       * A1 = tf.nn.relu(Z1)
+       * P1 = tf.nn.max_pool(A1,ksize=[1,2,2,1],strides=[1,2,2,1],padding="SAME")
+     * FC层
+       * 变成一维
+         * tf.contrib.layers.flatten(P2)
+       * Z3 = tf.contrib.layers.fully_connected(P2,6,activation_fn=None)
+       * 需要指定神经元个数
+
+1. 
    1. (w,y,w,h): xy是物体中心点位置，wh以及中心点距离物体两边的长宽
    2. xmin,ymin,xmax,ymax:物体位置的左上角（min），右下角（max）坐标。
    3. ![](/img/8.png)
-
-6. 对于分类的概率，使用 交叉熵损失
-
-7. 对于位置信息具体的数值，可使用 **MSE均方误差**损失（L2损失）
-
-8. R-CNN
+2. 对于分类的概率，使用 交叉熵损失
+3. 对于位置信息具体的数值，可使用 **MSE均方误差**损失（L2损失）
+4. R-CNN
 
    1. 步骤
       1. 对一张图片，SS算法找出图片中可能存在目标的候选区域，2000个
@@ -49,10 +125,8 @@
       3. 经过20个类别的SVM分类器，对于2000个候选区域做判断，得到[2000,20]得分矩阵，即每个候选区域，都有每个类别做判断得分。
       4. 2000个候选区域，做NMS(non-maximum suppression:非极大值抑制),取出不好的，重叠度高的一些候选区域，得到剩下的 结果好的，分数高的框。
       5. 修正候选框，bbox回归微调
-
-9. 候选区域(ROI)
-
-10. 特征向量训练分类器SVM，见步骤3
+5. 候选区域(ROI)
+6. 特征向量训练分类器SVM，见步骤3
 
    * R-CNN选用SVM二分类，假设20个类别，则得出[2000,20]的得分矩阵，每个向量都有20个类别的分数
 
@@ -249,56 +323,8 @@
 
          1. 损失：
             * 三部分损失：bbox损失 + confidence损失 + classficattion损失
-
-
-
-1. 卷积神经网络
-
-   * 包含：
-
-     1. 卷积层（convolution）
-
-        * 卷积运算过程：需要卷积核
-          * 大小：奇数大小的过滤器，1×1,3×3,5×5
-        * 1、正常卷积核运算，默认移动一个像素
-          * 缺点 ：图片变小，边缘信息丢失
-        * 2、零填充
-          * 因为0在权重乘积和运算中对最终结果不造成影响，也就避免了图片增加了额外的干扰信息。
-          * ![19](/img/19.png)
-          * 两种方式
-            * Valid：不填充，结果变小
-            * SAME：输出图像与原图相等大小
-          * 注意：由于避免零填充不均匀，所以我们需要奇数大小的过滤器,F即卷积核为奇数
-        * 3、步长
-          * 如果步长不为默认1的情况下，那么
-            * 图片大小N,过滤器大小F,步长S,零填充P
-            * 卷积后尺寸：((N+2P-F)/S+1),((N+2P-F)/S+1) (原尺寸 + 2*零填充-卷积核) /步长
-        * 4、多通道的图片：Filter必须使用相同的通道数
-        * 5、多个卷积核数量
-          * 得到的特征图大小没有影响，而数量会变化，多少卷积核多少特征图
-
-     2. 卷积层的运算结果
-
-        * 假设神经网络某层  ζ 的输入：
-
-        ![notknow1](img/notknow1.png)
-
-     3. 池化层（subsampling）
-
-        * 最大池化
-          * ![20](img/20.png)
-        * 平均池化
-        * 窗口设置
-          * 2×2 ，两个步长，没有参数
-        * 作用
-          * 降低了后续网络层的输入维度，缩减模型大小，提高计算速度
-          * 提高了Feature Map的鲁棒性，防止过拟合
-
-     4. 全连接层（full connection）
-
-        * ![21](img/21.png)
-
-     5. 激活函数
    
-2. 经典分类卷积网络结构
+4. SSD
+
+   1. 
 
