--- a/1.2.解疑.md
+++ b/1.2.解疑.md
@@ -326,5 +326,8 @@
    
 4. SSD
 
-   1. 
+   1. 结合了yolo的回归思想和Faster-RCNN中的Anchor机制
+   2. 不同尺度的特征图上采用卷积核来预测一系列Default Bounding Boxex的类别，坐标偏移
+   3. 不同尺度feature map所有特征点上使用PriorBox层（Detector＆classfier）
+   4. 
 
