--- a/1.6深度学习.md
+++ b/1.6深度学习.md
@@ -36,3 +36,35 @@
 
 # 4.Densenet
 
+# 5.卷积神经网络
+
+1. 卷积：提取图像底层特征
+
+2. 池化层：防止过拟合，并将数据维度减小
+
+3. 全连接层：汇总
+
+4. 卷积基本操作：
+
+   1. 卷积核是 机器学出来的！
+   2. 卷积核到的地方叫 感受野
+   3. padding的存在：使图片边缘的信息也可以等同于中心一样被 多次访问
+   4. 多少个卷积核，多少个输出/feature map/特征图，每一个卷积核对应一个featuremap
+   5. dilation：棋盘，可以跨像素的捕捉感受野
+   6. 图像是多通道，卷积核也会是多通道。
+   7. **一个卷积核对应一个feature map！**
+   8. 卷积核的参数不同，对提取特征也不同，实际不需自己设置，是卷积神经网络 反向传播，梯度下降自己找到的值
+
+5. 池化（下采样）：在前一步中，如果卷积核太多，导致feature map通道数太多，**过拟合**，这时候需要池化来 **减少参数**，另有 **平移不变性**作用 --- 保留feature map的同时，缩小数据量
+
+   1. 两种
+
+      1. 平均池化
+      2. 最大池化：图片中锐利高亮的地方
+
+   2. 平移不变性：滑动时，感受野不同，但得到的feature map 同，所以平移不变性
+
+      ![30平移不变性](img/30平移不变性.png)
+
+6. 最后拉成一个长向量，经过全连接层 到softmax层
+
