--- a/1.2.解疑.md
+++ b/1.2.解疑.md
@@ -37,7 +37,7 @@
         * 3、步长
           * 如果步长不为默认1的情况下，那么
             * 图片大小N,过滤器大小F,步长S,零填充P
-            * 卷积后尺寸：((N+2P-F)/S+1),((N+2P-F)/S+1) (原尺寸 + 2*零填充-卷积核) /步长
+            * 卷积后尺寸：((N+2P-F)/S+1),((N+2P-F)/S+1) (原尺寸 + 2*零填充-卷积核) /步长 +1 
         * 4、多通道的图片：Filter必须使用相同的通道数
         * 5、多个卷积核数量
           * 得到的特征图大小没有影响，而数量会变化，多少卷积核多少特征图
