--- a/1.6深度学习.md
+++ b/1.6深度学习.md
@@ -62,7 +62,7 @@
       1. 平均池化
       2. 最大池化：图片中锐利高亮的地方
 
-   2. 平移不变性：滑动时，感受野不同，但得到的feature map 同，所以平移不变性
+   2. 平移不变性：滑动时，感受野不同，但得到的feature map 同，所以平移不变性，下采样带来平移不变性。
 
       ![30平移不变性](img/30平移不变性.png)
 
