--- a/1.基础.md
+++ b/1.基础.md
@@ -26,7 +26,7 @@
 
    `print(1 < i <= 3)  *# True*`
 
-7. **几（几次方）
+7. **几（几次方） `2**4  -->  2*2*2*2`
 
 8.  正则中字符 **r** 是干啥的
 
@@ -324,23 +324,34 @@
 
 35. (**sequence** 下)判断 元素 是否存在于列表或元组里 用 `in`，返回`false`或`true`
 
-36. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
+36. ```python
+     # enumerate(可遍历对象，	start=0)
+        for i in enumerate(list):
+            print(i)
+    # enumerate 返回的是一个个的元组,元组的第一个数据是原迭代对象的数据对应的下标，元组第二个数据是原迭代对象的数据
+    # (0, 'a')
+    # (1, 'b')
+    ```
 
-37. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+    
 
-38. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+37. 多个变量同时赋值：`x,y = (1,2)`  ,x 的值为1，y 的值为2
 
-39. 且 的条件组合：**and**
+38. 列表同时赋值：`name,age = ['李逵',33]` ,name 的值为 '李逵'，age的值为 33
+
+39. 不对的例子：`x,y = (1,2,3)    a,b = [1]`
+
+40. 且 的条件组合：**and**
 
     或 的条件组合：**or**
 
-40. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
+41. 如果 and  和 or  一起使用，则**先计算 and**，其结果在和 or 一起计算。
 
-41. **not**  翻转表达式。
+42. **not**  翻转表达式。
 
-42. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
+43. 如果 and  or not 一起计算，则 先计算 **not**，再计算 **and**，最后是 **or**。比如：`not 4 > 6 or 'sk' == 'ok' and 4 > 3`.则先计算 **not 4 > 6** ，得到 **true**，再计算 **'sk' == 'ok' and 4 > 3**，得到 **false**。最后计算 **or**， 就是 **true or false** 。最后结果是 **true**。
 
-43. ```python
+44. ```python
     def regis(): # 注意定义函数后的 冒号
         phont = input('请输入手机号（不超过11位）：')
         if len(phone) > 11: # 注意if语句后的 冒号
@@ -355,9 +366,9 @@
     regis()
     ```
 
-44. 字面量（直接写出来的） 和 变量
+45. 字面量（直接写出来的） 和 变量
 
-45. 字符串
+46. 字符串
 
     1.  字符串.count('xx')
 
@@ -391,7 +402,7 @@
 
     10.  startswith和endswith：检查开头或结尾是否包含某字符串并返回true或false。
 
-46. 列表对象
+47. 列表对象
 
     1.  append：改变列表内容，在**后面**加一个元素
     2.  insert:在指定位置（索引）处添加。
@@ -399,7 +410,7 @@
     4.  remove：删除。pop是删除元素的**索引**，remove是删除元素的**值**。remove从第一个元素开始，寻找 和参数对象 相同的元素，如果找到了就删除。找到后，不会继续往后找其他相等的元素。也就是说remove最多只会删除一个元素。
     5.  reverse：倒置，将列表中元素倒过来。
 
-47. 格式化字符串：把一串 字符串模板 的 变量值 传进去
+48. 格式化字符串：把一串 字符串模板 的 变量值 传进去
 
     1.  printf格式化字符串：%s，这种占位符方式。`printf('%s,%s,%s' %(x,y,z))`
         1.  如果占位符是1个，后面的元组里边一定别忘了**加逗号**.`printf('%s' %(x,))`.。因为%()是一个元组。
@@ -414,7 +425,7 @@
         5.  {s:<08.2f}：不足右边补0.
         6.  {s:08.2f}:不足左边补0，因为此时没有左对齐了。
 
-48. 循环：while 和 for
+49. 循环：while 和 for
 
     1. ```python
        command = input('请输入命令：')
@@ -501,7 +512,7 @@
                     printf(f'{mem1} 大战 {mem2}')
             ```
 
-49. 字符串编码
+50. 字符串编码
 
     ```python
     print('你好'.encode('utf8')) # 输出 b'\xe4\xbd......'
@@ -511,7 +522,7 @@
     # 你好 两个字 编码后为 e4bda0 e5a5bd
     ```
 
-50. 文件操作
+51. 文件操作
 
     1. 首先通过**内置函数open** 打开文件,获得**文件对象**。
 
@@ -692,9 +703,9 @@
                 2.  
           
 
-51. IDE
+52. IDE
 
-52. 字典
+53. 字典
 
     1. key-value
 
@@ -785,7 +796,7 @@
 
     15. 得到字典中元素的个数：`len(mem)`
 
-53. ```python
+54. ```python
     type(12) ## 整数
     type('12') ## 字符
     type([1,2]) ## 列表
@@ -793,7 +804,7 @@
     type({1:2}) ## 字典
     ```
 
-54. 自定义类
+55. 自定义类
 
     1.  ```python
         def pressHorn():
@@ -880,7 +891,7 @@
         
     4.  类的组合关系
 
-55. 异常
+56. 异常
 
     1. 定义异常对象
 
@@ -919,7 +930,7 @@
               print(traceback.format_exc())## 打印错误代码行数 必须import traceback
           ```
 
-56. 多线程
+57. 多线程
 
     1. ```python
        print('主线程')
@@ -997,7 +1008,7 @@
         print(f'最后为{bant["tec"]}')
         ```
 
-57. 装饰器
+58. 装饰器
 
     1.  ```python
         import time
@@ -1035,7 +1046,7 @@
         # https://www.zhihu.com/question/26930016
         ```
 
-58. JSON序列化
+59. JSON序列化
 
     1.  JSON是个字符串
     2.  列表中镶嵌字典(数据对象)→字符串
@@ -1044,7 +1055,7 @@
     5.  序列化：`jsonStr = json.dumps(historyTransactions,ensure_ascii=False,indent=4)`
     6.  反序列化：`obj = json.loads(jsonStr)`
 
-59. socket
+60. socket
 
     1. ```python
        # tcp server 服务端
@@ -1136,7 +1147,7 @@
         
         ```
 
-60. 日期与时间
+61. 日期与时间
 
     1.  `time.time()`
 
@@ -1151,7 +1162,7 @@
         time.strftime('%Y%m%d %H:%M:%S',time.localtime(秒数))#epoch秒数
         ```
 
-61. 文件和目录
+62. 文件和目录
 
     1.  ```python
         # 递归创建目录 makedirs
@@ -1183,7 +1194,7 @@
         print(dirs)
         ```
 
-62. JSON深度拷贝
+63. JSON深度拷贝
 
     1.  ```python
         t1 = [
@@ -1200,39 +1211,39 @@
         # 先序列化为字节串再反序列化
         ```
 
-63.  正则
+64. 正则
 
-     1.  ```python
-         # 以d开始，[a-z]表示的任意一个小写英文字符，{7}表示小写英文字符出现7次(下面情况3会说到)，也就是匹配出来的子串长度为1+7=8:
-         pat = 'd[a-z]{7}'
-         result = re.findall(pat,s)
-         
-         # [A-Z]  匹配大写英文字母
-         # [0-9]  匹配一个0-9之间的数字
-         # \s  匹配空白字符，如\n \t \b等
-         # \w  匹配任意字母、数字、下划线 
-         # \d  匹配十进制数字0-9
-         # 而\S, \W, \D 分别对应 \s, \w, \d匹配字符集的补集，例如\S 的意思是匹配 \s 以外的其他任意字符。
-         ```
+    1.  ```python
+        # 以d开始，[a-z]表示的任意一个小写英文字符，{7}表示小写英文字符出现7次(下面情况3会说到)，也就是匹配出来的子串长度为1+7=8:
+        pat = 'd[a-z]{7}'
+        result = re.findall(pat,s)
+        
+        # [A-Z]  匹配大写英文字母
+        # [0-9]  匹配一个0-9之间的数字
+        # \s  匹配空白字符，如\n \t \b等
+        # \w  匹配任意字母、数字、下划线 
+        # \d  匹配十进制数字0-9
+        # 而\S, \W, \D 分别对应 \s, \w, \d匹配字符集的补集，例如\S 的意思是匹配 \s 以外的其他任意字符。
+        ```
 
-64.  ### 使用元字符查找
+65. ### 使用元字符查找
 
-     1.  `元`的含义大家不妨理解为用来描述它后面事物的类，如*元类*用来创建描述类的类，*元模型*描述一个模型的模型，因此推而广之，*元字符*用来描述字符的字符。
+    1.  `元`的含义大家不妨理解为用来描述它后面事物的类，如*元类*用来创建描述类的类，*元模型*描述一个模型的模型，因此推而广之，*元字符*用来描述字符的字符。
 
-         理解以上后，你再看正则中使用最普遍的一个元字符 `+`，它是用来描述前面一个原子出现次数的字符，表示前一个原子出现1次或多次都可。
+        理解以上后，你再看正则中使用最普遍的一个元字符 `+`，它是用来描述前面一个原子出现次数的字符，表示前一个原子出现1次或多次都可。
 
-         例如，在寻找手机靓号时，正则表达式`66+`，表示前一个原子`6`至少出现1次，因此连上第一个6，表示电话号码中至少有两个66紧邻。因此，电话号码`18612652166`、`17566665656`都满足要求，而号码`18616161616`不符合要求。
+        例如，在寻找手机靓号时，正则表达式`66+`，表示前一个原子`6`至少出现1次，因此连上第一个6，表示电话号码中至少有两个66紧邻。因此，电话号码`18612652166`、`17566665656`都满足要求，而号码`18616161616`不符合要求。
 
-         类似功能的元字符，还包括如下。功能相似，不再赘述：
+        类似功能的元字符，还包括如下。功能相似，不再赘述：
 
-         + \* 前面的原子重复0次、1次、多次  
-         + ? 前面的原子重复0次或者1次  
-         + 前面的原子重复1次或多次 
-         + {n} 前面的原子出现了 n 次 
-         + {n,} 前面的原子至少出现 n 次 
-         + {n,m} 前面的原子出现次数介于 n-m 之间
-     
-65. **时间转数组及常用格式**
+        + \* 前面的原子重复0次、1次、多次  
+        + ? 前面的原子重复0次或者1次  
+        + 前面的原子重复1次或多次 
+        + {n} 前面的原子出现了 n 次 
+        + {n,} 前面的原子至少出现 n 次 
+        + {n,m} 前面的原子出现次数介于 n-m 之间
+
+66. **时间转数组及常用格式**
 
     1. ```python
            %Y  #Year with century as a decimal number.
